    * Move away from the monolithic singleton
    * Bugfixes
    * Subtests accept args
    * Outdent subtest diag
    * Deprecate: Test::Builder::Tester, Test::Tester, Test::Builder::Module
    * Add Context as an easier alternative to $Level
    * API Enhancements
    * Better encoding support in TAP output
    * Add the 'modern' flag to disable old features
    * Drop perl5.6 support

1.001003     Fri Mar  21 21:12:32 PST 2014
    * Doc updates for maintainer change

1.001002     Mon Nov  4 15:13:58 EST 2013
    * no changes since 0.99

1.001001_001 Wed Oct 30 20:47:23 EDT 2013
    * no code changes, just a new version number with more room to grow

0.99     Tue Oct 29 13:21:03 2013 EDT 2013
    * restore ability to use regex with test_err and test_out
      (Zefram) [rt.cpan.org #89655] [github #389] [github #387]

0.99     Sat Oct 12 15:05:41 EDT 2013
    * no changes since 0.98_06

0.98_06  Fri Sep 27 10:11:05 EDT 2013
    Bug Fixes
    * Fix precedence error with (return ... and ...)
      (nthykier) [github #385]

0.98_05  Tue Apr 23 17:33:51 PDT 2013
    Doc Changes
    * Add a shorter work around for the UTF-8 output problem.
      (Michael G Schwern)

    Bug Fixes
    * Test::Builder::Tester now works with subtests.
      (Michael G Schwern) [github 350]
    * Fix test_fail() inside a do statement.
      (nnutter) [github #369]

    New Features
    * A subtest will put its name at the front of its results to make
      subtests easier to read. [github #290] [github #364]
      (Brendan Byrd)

    Feature Changes
    * like() and unlike() no longer warn about undef. [github #335]
      (Michael G Schwern)


0.98_04  Sun Apr 14 10:54:13 BST 2013
    Distribution Changes
    * Scalar::Util 1.13 (ships with Perl 5.8.1) is now required.
      (Michael G Schwern)

    Feature Changes
    * The default name and diagnostics for isa_ok() and new_ok() have
      changed. (Michael G Schwern)

    Docs Fixes